# nrf52

./: Cargo.toml  flake.nix  memory.x  script.gdb
.cargo/: config.toml
src/: main.rs
test-app/: Cargo.toml  script.gdb
test-app/.cargo/: config.toml
usb/device/: Cargo.toml  script.gdb
usb/device/src/: main.rs
usb/host/: Cargo.toml
usb/host/src/: main.rs
